--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+.idea/
 
 # Expo
 .expo/
@@ -35,4 +36,8 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
+# Jest
+coverage/**/*
+
 app-example
+
